# chord_finder

./: README.md  accord.ml  ast.ml  bourgeois.txt  chiffrage.ml  chiffrage.mli  dune  gamme.ml  gamme.mli  help_chords.ml  joseph.txt  lex.mll  note.ml  note.mli  parse.ml  parse_all.mly  pp.ml
tests/: misoldo.txt
